<resources>
    <string name="app_name">Quip</string>
    // Strings botones
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    // Strings dialogo borrar
    <string name="mensaje_confirm_borrar_nota">¿Seguro que quieres borrar esta nota?</string>
    <string name="mensaje_confirm_borrar_lista">¿Seguro que quieres borrar esta lista?</string>
    <string name="etiqueta_dialogo_borrar">Eliminar: </string>
    // nota
    <string name="cuerpo_nota">Nota</string>
    <string name="titulo_nota">Titulo</string>
    <string name="texto_crear_nota">Tomar una nota...</string>
    <string name="titulo_lista">Titulo</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hint_titulo">Titulo</string>
    <string name="add_list_item">Elemento de lista</string>
    <string name="papelera_drawer">Papelera</string>
    <string name="notas_drawer">Notas</string>
    <string name="drawer_recordatorio">Recordatorios</string>
    <string name="drawer_list">Listas</string>
    <string name="drawer_elementos">Todos</string>
    <string name="maps_drawer">Mapas</string>
    <string name="vaciar_papelera">Vaciar Papelera</string>

    //Strings dialogo recuperar
    <string name="mensaje_confirm_recuperar_nota">¿Seguro que quieres recuperar esta nota?</string>
    <string name="mensaje_confirm_recuperar_lista">¿Seguro que quieres recuperar esta lista?</string>
    <string name="etiqueta_dialogo_recuperar">Recuperar: </string>

    //String dialogo eliminar notificacion
    <string name="titulo_eliminar_notificacion">Notificacion</string>
    <string name="mensaje_eliminar_notificacion">¿Desea eliminar la notificacion asignada?</string>

    //String dialogo fecha incorrecta
    <string name="titulo_fecha_incorrecta">Error</string>
    <string name="mensaje_fecha_incorrecta">Fecha introducida incorrecta</string>
    //Login
    <string name="mensaje_usuario_desconectado">Desconectado</string>

    //Mensaje papelera
    <string name="mensaje_papelera_vacia">Papelera Vacia</string>
    <string name="iniciar_sesion_drawer">Iniciar Sesion</string>
    <string name="cerrar_sesion_drawer">Salir</string>

    //String mensaje progressdialog
    <string name="message_progress_dialog">Cargando</string>

    //String mensaje dialogo permisos
    <string name="message_permissions">Debe habilitar los siguientes permisos</string>

    //String mensaje dialogo Speech
    <string name="message_speech">Habla</string>
    <string name="message_error_speech">Dispositivo no soportado</string>

    //String login google
    <string name="message_error_login">Debe de iniciar sesion</string>
    <string name="message_reintentar_login">Reintentar</string>

    //Login Facebook
    <string name="facebook_app_id">1730680857250743</string>
    <string name="error_cuenta_fcb">No se ha podido obtener su correo</string>
    <string name="cancel_login_fcb">Login Cancelado</string>
    <string name="error_login_fcb">Imposible iniciar sesion</string>

    //Mensajes Permisos
    <string name="aceptar_permisos">Debes de aceptar los permisos para iniciar sesion</string>
    <string name="conceder_permisos">Conceder Permisos</string>
    <string name="compartir">Compartir Archivo</string>
    <string name="color_dialog">Escoja un color</string>

    //RecyclerView Group
    <string name="numero_elementos">elementos marcados</string>
    <string name="action_search">Buscar</string>

    <string name="msg_notif_map_on">Ya mismo llegas!</string>
    <string name="msg_notif_map_off">Te has pasado!</string>
    <string name="msg_notif_map_del">Notificacion eliminada</string>

    <string name="help_nota1">Escribir o editar una nota de texto</string>
    <string name="help_lista1">Crear una lista</string>
    <string name="help_share">Compartir notas y listas</string>
    <string name="help_sug">Enviar sugerecias</string>
    <string name="help_drawer">Ayuda y enviar sugerencias</string>

    //Spinners
    <string-array name="spinner_fecha_array">
        <item>Hoy</item>
        <item>Mañana</item>
        <item>Elegir una fecha...</item>
    </string-array>

    <string-array name="spinner_hora_array">
        <item>Mañana 8:00</item>
        <item>Al mediodía 13:00</item>
        <item>Tarde 18:00</item>
        <item>Noche 20:00</item>
        <item>Elegir una hora...</item>
    </string-array>
</resources>
