<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_todos"
            android:icon="@drawable/ic_assignment_black_24px"
            android:title="@string/drawer_elementos" />
        <item
            android:id="@+id/drawer_notas"
            android:title="@string/notas_drawer"
            android:icon="@drawable/ic_event_note_black_24px" />
        <item
            android:id="@+id/drawer_list"
            android:title="@string/drawer_list"
            android:icon="@drawable/ic_list_black_24px"/>
        <item
            android:id="@+id/drawer_notification"
            android:title="@string/drawer_recordatorio"
            android:icon="@drawable/ic_alarm_on_black_24px"/>
        <item
            android:id="@+id/drawer_papelera"
            android:title="@string/papelera_drawer"
            android:icon="@drawable/ic_delete_black_24px" />
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="Otras opciones">
        <menu>
            <item
                android:id="@+id/help_drawer"
                android:title="@string/help_drawer"
                android:icon="@drawable/ic_help_black_24px"/>
            <item
                android:id="@+id/maps_drawer"
                android:title="@string/maps_drawer"
                android:icon="@drawable/ic_place_black_24px"/>
            <item
                android:id="@+id/cerrar_sesion"
                android:title="@string/cerrar_sesion_drawer"
                android:icon="@drawable/ic_power_settings_new_black_24px"/>

        </menu>
    </item>
</menu>